Fix letter-spacing, distance between elements, and general design fixes on faq page

--- a/app/assets/stylesheets/base/general.sass
+++ b/app/assets/stylesheets/base/general.sass
@@ -51,7 +51,7 @@ body
 
 .main-header
   background: $dark-gray
-  padding: 30px 0
+  padding: 25px 0
 
 .menu-nav
   float: left
@@ -66,8 +66,11 @@ body
     &:first-child
       margin-left: 0
     a
+      +adjust-font-size-to(20px)
+      font-weight: 700
       display: block
       color: $gray
+      letter-spacing: 2px
       text-decoration: none
       text-transform: uppercase
       &:hover
@@ -82,7 +85,7 @@ body
   padding: 0
   li
     +inline-block
-    margin-left: 25px
+    margin-left: 22px
     &:first-child
       margin-left: 0
 
@@ -96,12 +99,12 @@ body
 
 .intro-wrapper
   background: $green
-  padding: 130px 0 110px
+  padding: 130px 0 106px
   text-align: center
   p
-    +squish(2)
-    +span-columns(12, 16)
+    width: 640px
     +adjust-font-size-to(18px)
+    margin: 0 auto
 
 .logo
   width: 241px
@@ -110,11 +113,13 @@ body
 .main-title
   +inline-block
   +adjust-font-size-to(24px)
-  line-height: 38px
+  line-height: 36px
   text-transform: uppercase
   border-top: 4px solid $dark-gray
   border-bottom: 4px solid $dark-gray
   margin-bottom: 40px
+  margin-top: 0
+  letter-spacing: 1.4px
 
 //-----------------------------------------------------------------------
 //
@@ -125,7 +130,7 @@ body
 //-----------------------------------------------------------------------
 
 .video-presentation
-  padding: 175px 0 410px
+  padding: 175px 0 404px
   background: $gray
 
 .video-wrapper
@@ -149,16 +154,22 @@ body
   background: $green
   margin-top: -205px
   margin-bottom: 160px
-  padding: 50px 0 80px
+  padding: 54px 0 80px
   text-align: center
   h1
     +adjust-font-size-to(22px)
+    word-spacing: 1px
     text-transform: uppercase
-    margin: 0 0 70px
+    margin: 0 0 63px
+    word-spacing: 1px
+    letter-spacing: 1.2px
+  a
+    color: $dark-gray
   p
     +adjust-font-size-to(14px)
     line-height: 1.3em
     padding: 0 1.1em
+    margin-top: 29px
 
 .steps-wrapper
   +span-columns(12, 16)
@@ -186,15 +197,17 @@ body
   margin-bottom: 150px
 
 .base-btn
+  +adjust-font-size-to(22px)
   display: block
-  width: 155px
+  width: 190px
+  line-height: 0.8em
   margin: 0 auto
   text-align: center
   text-transform: uppercase
   text-decoration: none
   background: $gray
   color: darken($dark-gray, 20%)
-  padding: 13px 25px
+  padding: 13px
   &:hover
     background: $green
 
@@ -283,14 +296,21 @@ body
   line-height: 1.0em
   text-transform: uppercase
   margin: 0
-  margin-bottom: 25px
+  margin-bottom: 15px
 
 .product-description
+  +adjust-font-size-to(14px)
+  line-height: 1.3em
   margin: 0
-  margin-bottom: 35px
+  margin-bottom: 30px
 
 .alt-btn
-  width: 100%
+  +adjust-font-size-to(14px)
+  width: 190px
+  margin: 0
+  padding: 10px
+  line-height: 1em
+  letter-spacing: 1px
   background: $dark-gray
   color: $gray
   &:hover
@@ -319,7 +339,7 @@ body
   height: 100%
   .line
     margin-top: 90px
-    margin-bottom: 60px
+    margin-bottom: 63px
 
 .faq-wrapper
   padding-bottom: 125px
@@ -330,16 +350,22 @@ body
   &:first-child
     margin-top: 0
   h1
-    +adjust-font-size-to(22px)
+    +adjust-font-size-to(25px)
     line-height: 1em
     text-transform: uppercase
     margin: 0
-    margin-bottom: 20px
+    margin-bottom: 15px
     font-weight: 700
+    letter-spacing: 0.7px
   p
     margin: 0
+    padding-right: 30px
+    line-height: 1.3em
   a
     color: $dark-gray
+  & > a
+    line-height: 1.3em
+    display: block
 
 .who-created
   margin-top: 99px
@@ -356,12 +382,12 @@ body
   font-style: normal
 
 .role
-  margin-top: 25px
+  margin-top: 15px
   &:first-child
     margin-top: 0
   span
     display: block
-    line-height: 1.4em
+    line-height: 1em
   strong
     font-weight: 700
 
